--- a/pom.xml
+++ b/pom.xml
@@ -10,85 +10,99 @@
 
     <packaging>war</packaging>
 
-        <properties>
-            <maven.compiler.source>17</maven.compiler.source>
-            <maven.compiler.target>17</maven.compiler.target>
-            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-            <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        </properties>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
 
-          <dependencies>
-              <!-- JakartaEE -->
-                 <dependency>
-                     <groupId>jakarta.platform</groupId>
-                     <artifactId>jakarta.jakartaee-api</artifactId>
-                     <version>9.0.0</version>
-                     <scope>provided</scope>
-                 </dependency>
+    <dependencies>
+        <!-- JakartaEE -->
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>10.0.0</version>
+            <scope>provided</scope>
+        </dependency>
 
-              <!-- Hibernate
-                 <dependency>
-                     <groupId>org.hibernate</groupId>
-                     <artifactId>hibernate-core-jakarta</artifactId>
-                     <version>5.6.15.Final</version>
-                 </dependency>
-                 -->
+        <!-- PrimeFaces -->
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>10.0.0</version>
+            <classifier>jakarta</classifier>
+        </dependency>
 
+        <!-- PrimeFlex -->
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>primeflex</artifactId>
+            <version>2.0.0</version>
+        </dependency>
 
-
-              <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
-              <!-- agregado de maven para usar la conexion 'Connector/J' -->
-              <dependency>
-                  <groupId>com.mysql</groupId>
-                  <artifactId>mysql-connector-j</artifactId>
-                  <version>9.1.0</version>
-              </dependency>
-
-              <!-- JSTL
-              <dependency>
-                  <groupId>org.glassfish.web</groupId>
-                  <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-                  <version>2.0.0</version>
-              </dependency>
-              -->
+        <!-- Hibernate
+           <dependency>
+               <groupId>org.hibernate</groupId>
+               <artifactId>hibernate-core-jakarta</artifactId>
+               <version>5.6.15.Final</version>
+           </dependency>
+           -->
 
 
-              <!-- CDI
-              <dependency>
-                  <groupId>org.jboss.weld.servlet</groupId>
-                  <artifactId>weld-servlet-core</artifactId>
-                  <version>4.0.1.SP1</version>
-              </dependency>
-              -->
-          </dependencies>
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <!-- agregado de maven para usar la conexion 'Connector/J' -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.1.0</version>
+        </dependency>
+
+        <!-- JSTL
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        -->
 
 
-             <build>
+        <!-- CDI
+        <dependency>
+            <groupId>org.jboss.weld.servlet</groupId>
+            <artifactId>weld-servlet-core</artifactId>
+            <version>4.0.1.SP1</version>
+        </dependency>
+        -->
+    </dependencies>
 
-                 <finalName>${project.artifactId}</finalName>
 
-                 <plugins>
-                     <plugin>
+    <build>
 
-                         <artifactId>maven-compiler-plugin</artifactId>
-                         <version>3.8.1</version>
-                     </plugin>
+        <finalName>${project.artifactId}</finalName>
 
-                     <!-- Servidor Wildfly -->
-                     <plugin>
-                         <groupId>org.wildfly.plugins</groupId>
-                         <artifactId>wildfly-maven-plugin</artifactId>
-                         <version>2.1.0.Final</version>
-                     </plugin>
+        <plugins>
+            <plugin>
 
-                     <plugin>
-                         <artifactId>maven-war-plugin</artifactId>
-                         <version>3.2.3</version>
-                         <configuration>
-                             <failOnMissingWebXml>false</failOnMissingWebXml>
-                         </configuration>
-                     </plugin>
-                 </plugins>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
 
-              </build>
+            <!-- Servidor Wildfly -->
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>2.1.0.Final</version>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.3</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
 </project>
