--- a/Desktop/Cursos/JavaSpanish/68_OnlineProducts/.gitignore
+++ b/Desktop/Cursos/JavaSpanish/68_OnlineProducts/.gitignore
@@ -37,13 +37,32 @@ build/
 ### Mac OS ###
 .DS_Store
 
-.DS_Store
+# Ignorar directorios y archivos del sistema
+
 Thumbs.db
 .idea/
-node_modules/
-.vscode/
+
 *.log
 *.db
 *.ini
 *.json
+*.zip
+*.rar
 AppData/
+node_modules/
+
+out/
+
+# Ignorar carpetas específicas detectadas
+../../../*
+../../../../*
+../*
+
+# Ignorar archivos sensibles o temporales
+*.class
+*.war
+*.jar
+*.tmp
+*.swp
+*.bak
+*.old
