--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.jalvarez.jsf</groupId>
-    <artifactId>68_OnlineProducts</artifactId>
+    <artifactId>OnlineProducts</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>war</packaging>
