Comentarios en ingles

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,25 +5,43 @@
          https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
 
+    <!-- PrimeFaces Theme -->
     <context-param>
         <param-name>primefaces.THEME</param-name>
         <param-value>vela</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
+        <param-value>true</param-value>
+    </context-param>
+    <context-param>
+        <param-name>javax.faces.PROJECT_STAGE</param-name>
+        <param-value>Development</param-value>
+    </context-param>
+
+
+    <!-- Define the FacesServlet -->
     <servlet>
         <servlet-name>faces-servlet-name</servlet-name>
         <servlet-class>jakarta.faces.webapp.FacesServlet</servlet-class>
     </servlet>
 
+
+    <!-- Maps the FacesServlet to handle URLs ending in .jsf -->
     <servlet-mapping>
         <servlet-name>faces-servlet-name</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
 
+
+    <!-- Specifies the welcome page for the application -->
     <welcome-file-list>
         <welcome-file>/index.jsf</welcome-file>
     </welcome-file-list>
 
+
+    <!-- Login configuration for form-based authentication -->
     <login-config>
         <auth-method>FORM</auth-method>
         <realm-name>ApplicationRealm</realm-name>
@@ -33,6 +51,8 @@
         </form-login-config>
     </login-config>
 
+
+    <!-- for JSF files requiring authentication -->
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>webapp-jsf3-jaas</web-resource-name>
@@ -44,6 +64,8 @@
         </auth-constraint>
     </security-constraint>
 
+
+    <!-- Security constraint for public resources -->
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>recursos permitidos</web-resource-name>
