--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,8 +46,8 @@
         <auth-method>FORM</auth-method>
         <realm-name>ApplicationRealm</realm-name>
         <form-login-config>
-            <form-login-page>/login.jsf</form-login-page>
-            <form-error-page>/loginError.jsf</form-error-page>
+            <form-login-page>/login.xhtml</form-login-page>
+            <form-error-page>/loginError.xhtml</form-error-page>
         </form-login-config>
     </login-config>
 
@@ -56,7 +56,7 @@
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>webapp-jsf3-jaas</web-resource-name>
-            <url-pattern>*.jsf</url-pattern>
+            <url-pattern>*.xhtml</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>USER</role-name>
